Fixing issue where edit buttons of an element group were visible while dragging it.

--- a/src-gwt/org/opencms/ade/containerpage/client/ui/css/containerpage.css
+++ b/src-gwt/org/opencms/ade/containerpage/client/ui/css/containerpage.css
@@ -176,7 +176,7 @@ div.groupcontainerPlaceholder{
 	border: none;
 }
 
-.dragStarted .dragElement.dragging .optionBar{
+.dragStarted .dragElement.dragging > .optionBar{
 	display: block;
 }
 
